--- a/pom.xml
+++ b/pom.xml
@@ -3,4 +3,31 @@
   <groupId>com.zhangyaoxing</groupId>
   <artifactId>zhangyaoxing-util</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
+  <build>
+    <plugins>
+     <!-- maven的编译插件 -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+         <artifactId>maven-compiler-plugin</artifactId>
+         <version>3.5.1</version>
+         <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+         </configuration>
+      </plugin>
+   
+   
+   </plugins>
+  
+  
+  </build>
+  
+  <dependencies>
+  	<dependency>
+  		<groupId>junit</groupId>
+  		<artifactId>junit</artifactId>
+  		<version>4.12</version>
+  	</dependency>
+  </dependencies>
 </project>
